# PicoEDM

./: .gitmodules  Cargo.toml  parser.ipynb  platformio.ini  plotter.py  runner.sh  test.tsv
.cargo/: config.toml
freq_gen/: Cargo.toml  test.gcode
freq_gen/.cargo/: config.toml
freq_gen/src/: main.rs
src/: main.cpp
