[package]
name = "freq_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.4"
critical-section = "1.1.2"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embedded-hal = "1.0.0"
fugit = "0.3.7"
panic-halt = "0.2.0"
pio = "0.2.1"
pio-proc = "0.2.2"
rp-pico = "0.9.0"
rp2040-hal = { version = "0.10.1", features = ["critical-section-impl"] }
usb-device = "0.3.2"
usbd-serial = "0.2.2"
